# research-reproducibility-framework

./: CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
paper/: paper.bib  paper.md
rrf/: ci_integration.py  dashboard.py  packager.py  runner.py
tests/: packager_test.py
